[gd_scene load_steps=6 format=3 uid="uid://f3rniwtlih8k"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_ntigh"]
[ext_resource type="Texture2D" uid="uid://cgerdtbgwf56c" path="res://Imagens/fundo_menu.jpg" id="1_xcc2n"]
[ext_resource type="Texture2D" uid="uid://bg1lat8t6mrrj" path="res://Imagens/game_logo.png" id="2_63k4w"]
[ext_resource type="Theme" uid="uid://c4ytkjk72k8w2" path="res://default_buttons.tres" id="2_hi7pb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aed8e"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntigh")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_xcc2n")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_63k4w")

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_aed8e")

[node name="register_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_hi7pb")
text = "Register"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_aed8e")

[node name="login_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_hi7pb")
text = "Login
"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_aed8e")

[node name="exit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_hi7pb")
text = "Exit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/register_btn" to="." method="_on_register_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/login_btn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/exit_btn" to="." method="_on_exit_btn_pressed"]
